Fix code to compile and work on java9 & java10